--- a/react-weatherapp/src/screens/favouriteScreen/Favourite.css
+++ b/react-weatherapp/src/screens/favouriteScreen/Favourite.css
@@ -1,5 +1,41 @@
-.mainContainerFav{
-    /* border: solid red; */
-    height: 100vh;
-    padding: 50px 10px 70px 10px;
-}
+.main {
+    width: 87vw;
+    height: 100%;
+  }
+  .nothingdiv {
+    display: flex;
+    flex-direction: column;
+    width: 87vw;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .nothingtext {
+    color: #ffffff;
+  
+    font-size: 22px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 21px;
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  .favtopbar {
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1vw;
+    color: #ffffff;
+  
+    font-size: 18px;
+  }
+  
+  .comprender {
+    display: flex;
+    height: 77vh;
+    flex-direction: column;
+    overflow: scroll;
+  }
