--- a/react-weatherapp/src/screens/homeScreen/HomeScreen.css
+++ b/react-weatherapp/src/screens/homeScreen/HomeScreen.css
@@ -4,7 +4,7 @@ height: 100vh;
 background: linear-gradient(to right, #5d5fce, #8e4091);
 }
 .container{
-    border:solid red;
+    /* border:solid red; */
     height: 93%;
     padding: 30px 100px 30px 100px;
 }
@@ -64,15 +64,17 @@ height: 17.49px;
     justify-content: space-between;
 
 }
-/* .middleHeader1{
-border: solid red;
+.middleHeader1{
+/* border: solid red; */
+width: 50%;
+justify-content: space-between;
 
-} */
+}
 .dateTime{
     height: 16px;
     width: 187px;
     color: #FFFFFF;
-    font-family: Roboto;
+    /* font-family: Roboto; */
     font-size: 14px;
     letter-spacing: 0;
     line-height: 16px;
@@ -86,9 +88,9 @@ border: solid red;
 }
 .navlink{
     /* color: #FFD639; */
-
-    margin-right: 50px;
-    padding: 0 5px 2px 5px;
+    /* border: solid red; */
+    margin-right: 6%;
+    padding: -1px 5px 2px 5px;
 }
 .line {
     box-sizing: border-box;
@@ -98,3 +100,41 @@ border: solid red;
     opacity: 0.3;
     /* border:solid yellow; */
   }
+
+  .hambergerMob{
+    display: none;
+}
+.searchIconMob{
+    display: none;
+}
+
+
+@media screen and (max-width : 520px) {
+
+    .main-container{
+        width: 100vw;
+        height: 100vh;
+        background: linear-gradient(to right, #5d5fce, #8e4091);
+        }
+    .container{
+        /* border:solid red; */
+        height: 93%;
+        padding:20px;
+    }
+    .hambergerMob{
+        display: block;
+    }
+    .searchinputContainer{
+        display: none;
+    }
+    .searchIconMob{
+        display: block;
+    }
+    .middleHeader{
+        display: none;
+    }
+    .line{
+        display: none;
+    }
+    
+}
